--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - sudo apt-get update
   - sudo apt-get -y install libopenturns-dev python-openturns cmake gfortran swig texlive-latex-recommended texlive-fonts-recommended texlive-latex-extra python-dev
   - sudo rm -r /opt/python/*
-  - pip install sphinx numpydoc matplotlib --user
+  - pip install sphinx numpydoc matplotlib --user --upgrade
 
 script:
   - cmake -DCMAKE_INSTALL_PREFIX=~/.local
