--- a/python/src/LinearModelAnalysis_doc.i.in
+++ b/python/src/LinearModelAnalysis_doc.i.in
@@ -45,7 +45,7 @@ Examples
 >>> ot.RandomGenerator.SetSeed(0)
 >>> distribution = ot.Normal()
 >>> Xsample = distribution.getSample(30)
->>> func = ot.Function('x', '2 * x + 1')
+>>> func = ot.SymbolicFunction(['x'], ['2 * x + 1'])
 >>> Ysample = func(Xsample) + ot.Normal().getSample(30)
 >>> algo = otlm.LinearModelAlgorithm(Ysample, Xsample)
 >>> result = algo.getResult()
