Do not embed numpydoc

--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -78,7 +78,7 @@ install ( FILES ${SWIGFILES}
 
 
 
-if (SPHINX_FOUND AND SPHINX_EXECUTABLE)
+if (SPHINX_FOUND)
 
   # create a build site-package from which sphinx can import
   set (OTLM_PYTHON_BUILD_MODULE_PATH ${CMAKE_CURRENT_BINARY_DIR}/site-packages)
