--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -50,7 +50,13 @@ todo_include_todos = True
 extensions.append('sphinx.ext.coverage')
 
 extensions.append('sphinx.ext.intersphinx')
-intersphinx_mapping = {'python': ('http://openturns.github.io/', 'openturns-objects.txt')}
+if LooseVersion(sphinx.__version__) < '1.3':
+    # always use local inventory
+    inventory = 'openturns-objects.inv'
+else:
+    # try to download inventory else fallback to local inventory
+    inventory = (None, 'openturns-objects.inv')
+intersphinx_mapping = {'openturns': ('http://openturns.github.io/openturns/latest', inventory)}
 
 try:
     import sphinx.ext.imgmath
