--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 
-include ( ${SWIG_USE_FILE} )
+include (${SWIG_USE_FILE})
+include (TargetLinkLibrariesWithDynamicLookup)
 
 include_directories ( ${OPENTURNS_SWIG_INCLUDE_DIRS} )
 add_definitions( ${OPENTURNS_SWIG_DEFINITIONS} )
@@ -12,8 +13,9 @@ macro ( ot_add_python_module MODULENAME SOURCEFILE )
   set_source_files_properties ( ${SOURCEFILE} PROPERTIES CPLUSPLUS ON )
   set_source_files_properties ( ${SOURCEFILE} PROPERTIES SWIG_MODULE_NAME ${MODULENAME} )
   ot_install_swig_file ( ${SOURCEFILE} )
-  if ( ${ARGC} GREATER 2 )
-    set ( SWIG_MODULE_${MODULENAME}_EXTRA_DEPS ${ARGN} )
+  if (${ARGC} GREATER 2)
+    set (SWIG_MODULE_${MODULENAME}_python_EXTRA_DEPS ${ARGN})
+    list (APPEND SWIG_MODULE_${MODULENAME}_python_EXTRA_DEPS generate_docstrings)
   endif ()
 
   set ( swig_other_sources )
@@ -36,21 +38,35 @@ macro ( ot_add_python_module MODULENAME SOURCEFILE )
 
   # swig_add_module is deprecated
   if (CMAKE_VERSION VERSION_LESS 3.8)
-    swig_add_module (${MODULENAME} python ${SOURCEFILE} ${swig_other_sources} )
+    swig_add_module (${MODULENAME}_python python ${SOURCEFILE} ${swig_other_sources} )
   else ()
-    swig_add_library (${MODULENAME} LANGUAGE python SOURCES ${SOURCEFILE} ${swig_other_sources})
+    swig_add_library (${MODULENAME}_python LANGUAGE python SOURCES ${SOURCEFILE} ${swig_other_sources})
   endif ()
 
-  add_dependencies ( ${SWIG_MODULE_${MODULENAME}_REAL_NAME} generate_docstrings )
-  swig_link_libraries ( ${MODULENAME} otlm )
-  if ( LINK_PYTHON_LIBRARY )
-    swig_link_libraries ( ${MODULENAME} ${PYTHON_LIBRARIES} )
+  # UseSWIG generates now standard target names
+  if (CMAKE_VERSION VERSION_LESS 3.13)
+    set (module_target ${SWIG_MODULE_${MODULENAME}_python_REAL_NAME})
+  else ()
+    set (module_target ${MODULENAME}_python)
   endif ()
 
-  set_target_properties ( ${SWIG_MODULE_${MODULENAME}_REAL_NAME} PROPERTIES NO_SONAME ON )
+  swig_link_libraries (${MODULENAME}_python otlm)
 
-  list ( APPEND PYTHON_MODULES ${MODULENAME} )
-endmacro ( ot_add_python_module )
+  target_link_libraries_with_dynamic_lookup (${module_target} ${PYTHON_LIBRARIES})
+
+  set_target_properties (${module_target} PROPERTIES OUTPUT_NAME _${MODULENAME})
+
+  if (CMAKE_VERSION VERSION_LESS 3.1)
+    set_target_properties (${module_target} PROPERTIES NO_SONAME ON)
+  endif ()
+
+  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${MODULENAME}.py
+           DESTINATION ${OTLM_PYTHON_MODULE_PATH}/${PACKAGE_NAME})
+  install (TARGETS ${module_target}
+            LIBRARY DESTINATION ${OTLM_PYTHON_MODULE_PATH}/${PACKAGE_NAME})
+
+  list (APPEND OTLM_PYTHON_MODULES ${MODULENAME})
+endmacro ()
 
 
 
@@ -63,22 +79,12 @@ ot_add_python_module( ${PACKAGE_NAME} ${PACKAGE_NAME}_module.i
                     )
 
 
-
-foreach ( module ${PYTHON_MODULES} )
-  install ( FILES ${CMAKE_CURRENT_BINARY_DIR}/${module}.py
-            DESTINATION ${OTLM_PYTHON_MODULE_PATH}/${PACKAGE_NAME}
-            )
-  install ( TARGETS _${module}
-            LIBRARY DESTINATION ${OTLM_PYTHON_MODULE_PATH}/${PACKAGE_NAME}
-          )
-endforeach ( module )
-
 install ( FILES __init__.py
           DESTINATION ${OTLM_PYTHON_MODULE_PATH}/${PACKAGE_NAME}
         )
 
 install ( FILES ${SWIGFILES}
-          DESTINATION ${OTLM_SWIG_INCLUDE_PATH}
+          DESTINATION ${OTLM_SWIG_INCLUDE_DIRS}
         )
 
 
@@ -89,7 +95,7 @@ if (SPHINX_FOUND)
   # create a build site-package from which sphinx can import
   set (OTLM_PYTHON_BUILD_MODULE_PATH ${CMAKE_CURRENT_BINARY_DIR}/site-packages)
   execute_process (COMMAND ${CMAKE_COMMAND} -E make_directory ${OTLM_PYTHON_BUILD_MODULE_PATH}/otlm)
-  foreach (module ${PYTHON_MODULES})
+  foreach (module ${OTLM_PYTHON_MODULES})
     execute_process (COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_BINARY_DIR}/${module}.py ${OTLM_PYTHON_BUILD_MODULE_PATH}/otlm/${module}.py)
     # FIXME: get_target_property (suffix ${SWIG_MODULE_${module}_REAL_NAME} SUFFIX)
     execute_process (COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_BINARY_DIR}/_${module}.so ${OTLM_PYTHON_BUILD_MODULE_PATH}/otlm/_${module}.so)
@@ -132,6 +138,7 @@ if (SPHINX_FOUND)
     ${SPHINX_SOURCE_DIR}/*.sty
     ${SPHINX_SOURCE_DIR}/*.txt
     ${SPHINX_SOURCE_DIR}/*.in
+    ${SPHINX_SOURCE_DIR}/*.inv
   )
 
   # copy sphinx sources
@@ -158,13 +165,19 @@ if (SPHINX_FOUND)
     add_custom_target ( sphinx_${format}
                         COMMAND ${SPHINX_EXECUTABLE}
                                   -b ${format}
+                                  -d ${SPHINX_BINARY_DIR}/.doctrees
                                   ${SPHINX_FLAGS}
                                   ${SPHINX_BINARY_DIR}
                                   ${SPHINX_BINARY_DIR}/${format}
                         DEPENDS ${sphinx_clones}
                       )
-    foreach (module ${PYTHON_MODULES})
-      add_dependencies (sphinx_${format} _${module})
+    foreach (MODULENAME ${OTLM_PYTHON_MODULES})
+      if (CMAKE_VERSION VERSION_LESS 3.13)
+        set (module_target ${SWIG_MODULE_${MODULENAME}_python_REAL_NAME})
+      else ()
+        set (module_target ${MODULENAME}_python)
+      endif ()
+      add_dependencies (sphinx_${format} ${module_target})
     endforeach ()
   endforeach ()
 
